--- a/index.html
+++ b/index.html
@@ -58,6 +58,24 @@
 </section>
 
 <section>
+  <h1>Lightning talks</h1>
+  <ul style="font-size: 0.75em;">
+    <li><strong>TutorWire - find tutors, fast!</strong> <small>with Alexi Makris &amp; Alan Shaw</small></li>
+    <li><strong>Soundcloud profile publisher</strong> <small>with Michael Klein</small></li>
+    <li><strong>RSS built with iron-router</strong> with Alex R</li>
+  </ul>
+</section>
+
+<section>
+  <h1>...more!</h1>
+  <ul style="font-size: 0.75em;">
+    <li><strong>WiFi app</strong> with Baris Balic</li>
+    <li><strong>Fantasy Biathlon</strong> with Richard Silverton</li>
+    <li><strong>Canvas-based frame animation web app</strong> with Mike Tucker</li>
+  </ul>
+</section>
+
+<section>
 	<h1>Sponsored by</h1>
 </section>
 
