--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <ul style="font-size: 0.75em;">
     <li><strong>TutorWire - find tutors, fast!</strong> <small>with Alexi Makris &amp; Alan Shaw</small></li>
     <li><strong>Soundcloud profile publisher</strong> <small>with Michael Klein</small></li>
-    <li><strong>RSS built with iron-router</strong> with Alex R</li>
+    <li><strong>RSS built with iron-router</strong> with Alex Riemer</li>
   </ul>
 </section>
 
