Last minute mods for last minute talks

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
 <section>
 	<h1>This month</h1>
 	<ul>
-		<li><strong>What's a DDP?</strong> <small>with Howard</small></li>
-		<li><strong>How to Meteor UI</strong> <small>with Manuel</small></li>
-		<li><strong>Special guest:</strong> Jade from Meteor!</li>
+		<li><strong>What's a DDP?</strong> <small>with Howard Tang</small></li>
+		<li><strong>How to Meteor UI</strong> <small>with Manuel Timita</small></li>
 	</ul>
 </section>
 
@@ -61,18 +60,32 @@
   <h1>Lightning talks</h1>
   <ul style="font-size: 0.75em;">
     <li><strong>TutorWire - find tutors, fast!</strong> <small>with Alexi Makris &amp; Alan Shaw</small></li>
-    <li><strong>Soundcloud profile publisher</strong> <small>with Michael Klein</small></li>
-    <li><strong>RSS built with iron-router</strong> with Alex Riemer</li>
+    <!-- <li><strong>Soundcloud profile publisher</strong> <small>with Michael Klein</small></li> -->
+    <li><strong>Sonic wonderment</strong> <small>with Chris Waring</small></li>
+    <li><strong>RSS with iron-router</strong> <small>with Alex Riemer</small></li>
   </ul>
 </section>
 
 <section>
   <h1>...more!</h1>
   <ul style="font-size: 0.75em;">
-    <li><strong>WiFi app</strong> with Baris Balic</li>
-    <li><strong>Fantasy Biathlon</strong> with Richard Silverton</li>
-    <li><strong>Canvas-based frame animation web app</strong> with Mike Tucker</li>
+    <li><strong>Whereabouts</strong> <small>with Baris Balic</small></li>
+    <li><strong>Fantasy Biathlon</strong> <small>with Richard Silverton</small></li>
+    <li><strong>Loop</strong> <small>with Mike Tucker</small></li>
   </ul>
+</section>
+
+<section>
+		<h1>and...</h1>
+</section>
+
+<section>
+	<h1>Meteor London goes <br/>Devshop!</h1>
+	<ul>
+		<li><strong>Bigger</strong> <small>...thanks to you and uSwitch!</small></li>
+		<li><strong>Pizza-ier</strong> <small>...thanks to MongoDB</small></li>
+		<li><strong>Special guest-ier</strong> Jade from Meteor!</li>
+	</ul>
 </section>
 
 <section>
