--- a/index.html
+++ b/index.html
@@ -34,74 +34,92 @@
 
 <section>
 	<h1>Meteor London is</h1>
-	<p>The "oldest" and 
+	<p>The "oldest" and
 		<span class="strike">2<sup>nd</sup></span>
 		<span class="strike">3<sup>rd</sup></span>
-		<span class="strike">2<sup>nd</sup></span> 
+		<span class="strike">2<sup>nd</sup></span>
 		<a href="http://meteor.meetup.com/">3<sup>rd</sup>  largest <br/>Meteor meetup in the world.</a>
 	</p>
 </section>
 
 <section>
 	<h1>This month</h1>
-	<h1><strong>Show &amp; Tell</strong></h1>
+	<h1><strong>Show &amp; Tell </strong></h1>
 	<p>Build a thing, learn a thing, show a thing</p>
 </section>
 
 <section>
 	<h1>This month</h1>
 	<ul>
-		<li><strong>What's a DDP?</strong> <small>with Howard Tang</small></li>
-		<li><strong>How to Meteor UI</strong> <small>with Manuel Timita</small></li>
+		<li><strong>Prisma</strong> <small>with Dominik Guzei</small></li>
+		<p>Building photoshop extensions with Metor</p>
 	</ul>
 </section>
 
 <section>
-  <h1>Lightning talks</h1>
+  <h1>DEMOS!</h1>
   <ul style="font-size: 0.75em;">
-    <li><strong>TutorWire - find tutors, fast!</strong> <small>with Alexi Makris &amp; Alan Shaw</small></li>
-    <!-- <li><strong>Soundcloud profile publisher</strong> <small>with Michael Klein</small></li> -->
-    <li><strong>Sonic wonderment</strong> <small>with Chris Waring</small></li>
-    <li><strong>RSS with iron-router</strong> <small>with Alex Riemer</small></li>
+		<li><strong>The design of simple</strong> <small>with Howard Tang</small></li>
+    <li><strong>Modern art with Meteor</strong> <small>with Chris Waring</small></li>
+		<li><strong>Server 2 Server DDP</strong> <small>with Alan Shaw</small></li>
   </ul>
 </section>
 
 <section>
-  <h1>...more!</h1>
-  <ul style="font-size: 0.75em;">
-    <li><strong>Whereabouts</strong> <small>with Baris Balic</small></li>
-    <li><strong>Fantasy Biathlon</strong> <small>with Richard Silverton</small></li>
-    <li><strong>Loop</strong> <small>with Mike Tucker</small></li>
-  </ul>
+	<h1>DEMOS!</h1>
+	<ul style="font-size: 0.75em;">
+		<li><strong>???</strong> <small>with James Uren &amp; co</small></li>
+		<li><strong>Multitouchy</strong> <small>with Bernard Morden</small></li>
+		<li><strong>Space for Meteor</strong> <small>with Dominik Guzei</small></li>
+	</ul>
 </section>
+
+<!--<section>-->
+  <!--<h1>...more!</h1>-->
+  <!--<ul style="font-size: 0.75em;">-->
+    <!--<li><strong>Whereabouts</strong> <small>with Baris Balic</small></li>-->
+    <!--<li><strong>Fantasy Biathlon</strong> <small>with Richard Silverton</small></li>-->
+    <!--<li><strong>Loop</strong> <small>with Mike Tucker</small></li>-->
+  <!--</ul>-->
+<!--</section>-->
 
 <section>
 		<h1>and...</h1>
 </section>
 
 <section>
-	<h1>Meteor London goes <br/>Devshop!</h1>
+	<h1>BURRITOS <small>from Poncho8</small></h1>
+  <img src="http://substack.net/images/burrito.png" alt=""/>
+</section>
+
+<section>
+  <h1>Sponsored by</h1>
+</section>
+
+<section style="background:rgb(0,0,0) url(https://www.meteor.com/universe.png) no-repeat center center; background-size: cover">
+  <h1 style="background:white; color:black; text-align:center">Meteor!</h1>
+</section>
+
+<section>
+  <h1>Hosted by</h1>
+</section>
+
+<section style="background:#99e2ff url(img/ustwo.png) no-repeat center center">
+</section>
+
+<section style="font-family:monospace;">
+	<h1>WIFI</h1>
 	<ul>
-		<li><strong>Bigger</strong> <small>...thanks to you and uSwitch!</small></li>
-		<li><strong>Pizza-ier</strong> <small>...thanks to MongoDB</small></li>
-		<li><strong>Special guest-ier</strong> Jade from Meteor!</li>
+		<li><strong>ustwo-guest</strong></li>
+		<li><strong>guest@ustwo.com</strong></li>
+		<li><strong>fampany!</strong></li>
 	</ul>
 </section>
 
 <section>
-	<h1>Sponsored by</h1>
-</section>
-
-<section style="background:rgb(78,54,41) url(http://info.mongodb.com/rs/mongodb/images/MongoDB_Logo_Full_Knockout.png) no-repeat center center">
-</section>
-
-<section style="background:#99e2ff url(http://dnpc2x3bdjjqt.cloudfront.net/includes/images/header/uswitch-logo-7dce2d94.png) no-repeat center center">
-</section>
-
-<section>
 	<h1>Beverages?</h1>
-	<p>The Sheaf, 24 Southwark Street, SE1 1TY</p>
-	<img src="http://www.london-se1.co.uk/restaurants/images/131026_sheaf.jpg">
+	<p>The Owl || BOXPAR(K)TY</p>
+	<img src="https://pbs.twimg.com/media/BsvIkBiIAAAfScj.jpg:large">
 </section>
 
 <section>
