--- a/index.html
+++ b/index.html
@@ -1,144 +1,112 @@
 <!DOCTYPE html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<meta name="description" content="Welcome to LNUG">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Meteor London</title>
-	<link rel="stylesheet" href="lib/normalize.v2.1.css">
-	<link rel="stylesheet" href="lib/stack.2013-09-23.css">
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<section>
-	<p>Welcome to</p>
-	<h1>Meteor London</h1>
-	<span class="meteor-logo"></span>
-</section>
-
-<section>
-	<h1>Meteor London is</h1>
-	<p>A monthly demo-centric early adopter support group.
-	</p>
-	<p>
-		<img class="headshot" src="http://photos3.meetupstatic.com/photos/member/a/7/3/c/member_96942812.jpeg" title="@olizilla" />
-		<img class="headshot" src="http://photos3.meetupstatic.com/photos/member/8/7/3/e/member_98674622.jpeg" title="@_alanshaw" />
-		<img class="headshot" src="http://photos3.meetupstatic.com/photos/member/a/f/c/0/member_94244992.jpeg" title="@cwaring" />
-		<img class="headshot" src="http://photos2.meetupstatic.com/photos/member/b/0/6/0/member_99345152.jpeg" title="@jongold" />
-		<img class="headshot" src="http://photos2.meetupstatic.com/photos/member/2/5/b/4/member_109569652.jpeg" title="Howard Tang" />
-		<img class="headshot" src="http://photos4.meetupstatic.com/photos/member/3/1/c/1/member_9732737.jpeg" title="@achingbrain" />
-	</p>
-</section>
-
-<section>
-	<h1>Meteor London is</h1>
-	<p>The "oldest" and
-		<span class="strike">2<sup>nd</sup></span>
-		<span class="strike">3<sup>rd</sup></span>
-		<span class="strike">2<sup>nd</sup></span>
-		<a href="http://meteor.meetup.com/">3<sup>rd</sup>  largest <br/>Meteor meetup in the world.</a>
-	</p>
-</section>
-
-<section>
-	<h1>This month</h1>
-	<h1><strong>Show &amp; Tell </strong></h1>
-	<p>Build a thing, learn a thing, show a thing</p>
-</section>
-
-<section>
-	<h1>This month</h1>
-	<ul>
-		<li><strong>Prisma</strong> <small>with Dominik Guzei</small></li>
-		<p>Building photoshop extensions with Metor</p>
-	</ul>
-</section>
-
-<section>
-  <h1>DEMOS!</h1>
-  <ul style="font-size: 0.75em;">
-		<li><strong>The design of simple</strong> <small>with Howard Tang</small></li>
-    <li><strong>Modern art with Meteor</strong> <small>with Chris Waring</small></li>
-		<li><strong>Server 2 Server DDP</strong> <small>with Alan Shaw</small></li>
-  </ul>
-</section>
-
-<section>
-	<h1>DEMOS!</h1>
-	<ul style="font-size: 0.75em;">
-		<li><strong>???</strong> <small>with James Uren &amp; co</small></li>
-		<li><strong>Multitouchy</strong> <small>with Bernard Morden</small></li>
-		<li><strong>Space for Meteor</strong> <small>with Dominik Guzei</small></li>
-	</ul>
-</section>
-
-<!--<section>-->
-  <!--<h1>...more!</h1>-->
-  <!--<ul style="font-size: 0.75em;">-->
-    <!--<li><strong>Whereabouts</strong> <small>with Baris Balic</small></li>-->
-    <!--<li><strong>Fantasy Biathlon</strong> <small>with Richard Silverton</small></li>-->
-    <!--<li><strong>Loop</strong> <small>with Mike Tucker</small></li>-->
-  <!--</ul>-->
-<!--</section>-->
-
-<section>
-		<h1>and...</h1>
-</section>
-
-<section>
-	<h1>BURRITOS <small>from Poncho8</small></h1>
-  <img src="http://substack.net/images/burrito.png" alt=""/>
-</section>
-
-<section>
-  <h1>Sponsored by</h1>
-</section>
-
-<section style="background:rgb(0,0,0) url(https://www.meteor.com/universe.png) no-repeat center center; background-size: cover">
-  <h1 style="background:white; color:black; text-align:center">Meteor!</h1>
-</section>
-
-<section>
-  <h1>Hosted by</h1>
-</section>
-
-<section style="background:#99e2ff url(img/ustwo.png) no-repeat center center">
-</section>
-
-<section style="font-family:monospace;">
-	<h1>WIFI</h1>
-	<ul>
-		<li><strong>ustwo-guest</strong></li>
-		<li><strong>guest@ustwo.com</strong></li>
-		<li><strong>fampany!</strong></li>
-	</ul>
-</section>
-
-<section>
-	<h1>Beverages?</h1>
-	<p>The Owl || BOXPAR(K)TY</p>
-	<img src="https://pbs.twimg.com/media/BsvIkBiIAAAfScj.jpg:large">
-</section>
-
-<section>
-	<p>OK Meteor London, it's...</p>
-	<h1>SHOW TIME!</h1>
-	<span class="meteor-logo"></span>
-</section>
-
-<section style="background-image:url(img/jolly-roger.gif);background-size:cover">
-	<img style="position:fixed; bottom:10px" src="img/explosion.gif" />
-	<img style="position:fixed; bottom:10px; right:60px" src="img/explosion.gif" />
-</section>
-
-<script src="lib/d3.v3.js"></script>
-<script src="lib/stack.2013-09-23.js"></script>
-<script src="lib/buzz.v1.0.5.js"></script>
-<script>
-	stack();
-	var coin = new buzz.sound( "audio/coin", { formats: [ "ogg", "mp3" ] }).load();
-	coin.setVolume(20).play();
-</script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Meteor London</title>
+    <link rel="stylesheet" type="text/css" href="build/build.css">
+  </head>
+  <body>
+    <article>
+      <section>
+        <header class="logo">
+          <div class="meteor">Meteor London</div>
+        </header>
+      </section>
+      <section data-bespoke-backdrop="meteorday" class="emphatic-text">
+        <h1>Meteor Day</h1>
+      </section>
+      <section>
+        <h2><a href="http://meteorday.meteor.com/">There's a lot of us</a></h2>
+      </section>
+      <section>
+        <h2>How did we get here?</h2>
+      </section>
+      <section>
+        <h2>Then...</h2>
+      </section>
+      <section>
+        <h2>In a public house</h2>
+      </section>
+      <section>
+        <h2>on a rainy February</h2>
+      </section>
+      <section>
+        <h2>(2013!)        </h2>
+      </section>
+      <section data-bespoke-backdrop="meteor-london-then-1"></section>
+      <section data-bespoke-backdrop="meteor-london-then-2"></section>
+      <section data-bespoke-backdrop="meteor-london-then-3"></section>
+      <section data-bespoke-backdrop="meteor-london-then-4"></section>
+      <section>
+        <h1>NOW</h1>
+      </section>
+      <section data-bespoke-backdrop="meteor-london-now-1"></section>
+      <section>
+        <h1>Meteor 1.0</h1>
+      </section>
+      <section data-bespoke-backdrop="meteor-london-now-2"></section>
+      <section>
+        <h2>What is Meteor?</h2>
+      </section>
+      <section>
+        <h1>Full stack framework        </h1>
+      </section>
+      <section>
+        <h1>JS everywhere</h1>
+      </section>
+      <section>
+        <h2>&</h2>
+      </section>
+      <section>
+        <h1>Transparent state syncing</h1>
+      </section>
+      <section>
+        <h2>server-side made simple</h2>
+      </section>
+      <section>
+        <h2>Means...</h2>
+      </section>
+      <section data-bespoke-backdrop="meteor-london-now-3" class="emphatic-text">
+        <h2>We can all build apps </h2>
+      </section>
+      <section>
+        <h1>Real time apps</h1>
+      </section>
+      <section>
+        <h1>Data driven apps</h1>
+      </section>
+      <section>
+        <h1>Responsive apps</h1>
+      </section>
+      <section>
+        <h1>Mobile apps</h1>
+      </section>
+      <section>
+        <h1>Production apps</h1>
+      </section>
+      <section data-bespoke-backdrop="meteor-london-now-4">       </section>
+      <section>
+        <h1>Epic community</h1>
+      </section>
+      <section>
+        <h2>there's a lot of us        </h2>
+      </section>
+      <section>
+        <h2><a href="http://meteorday.meteor.com/">meetup.com/Meteor-London/</a></h2>
+      </section>
+      <section>
+        <h2>Everyone has </h2>
+        <h2>>=1 </h2>
+        <h2>talk in them  </h2>
+      </section>
+      <section>
+        <h2><a href="http://meteorday.meteor.com/">tell a friend</a>      </h2>
+      </section>
+      <section>
+        <h1>DEMOS!</h1>
+      </section>
+    </article>
+  </body>
+</html>
+<script src="build/build.js"></script>
